--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -3,11 +3,16 @@
     <input type="search" autocomplete="off" name="term" class="form-control mr-sm-2" placeholder="Search for Song">
     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Add Song</button>
 </form>
-{{#each songs}}
-    <img src="{{this.album.images.[0].url}}" alt="album art" width="100" height="100">
-    "{{this.name}}" by
-    {{#each this.artists}}
-        {{this.name}}
+<div class="feed">
+    {{#each songs}}
+        <div class="share">
+            <img src="{{this.album.images.[0].url}}" alt="album art" width="100" height="100">
+            "{{this.name}}" by
+            {{#each this.artists}}
+                {{this.name}}
+            {{/each}}
+            <button class="delete-button" data-spotify-song-id={{this.id}} type="button" name="delete">Delete</button>
+            <hr>
+        </div>
     {{/each}}
-    <hr>
-{{/each}}
+</div>
