Add abilities to signup, login, logout

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,3 +1,7 @@
+<a href="/logout">Logout</a>
+<a href="/login">Login</a>
+<a href="/signup">Sign Up</a>
+
 <h1>What's Playing</h1>
 <form action="/search" method="GET">
     <input type="search" autocomplete="off" name="term" class="form-control mr-sm-2" placeholder="Search for Song">
