Attach shares to users and vis versa on creation, also shows user on feed

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -20,6 +20,7 @@
             {{#each this.artists}}
                 {{this.name}}
             {{/each}}
+            Shared by {{this.userID.username}}
             <button class="delete-button" data-spotify-song-id={{this.id}} type="button" name="delete">Delete</button>
             <hr>
         </div>
