--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -21,7 +21,9 @@
                 {{this.name}}
             {{/each}}
             Shared by {{this.userID.username}}
-            <button class="delete-button" data-spotify-song-id={{this.id}} type="button" name="delete">Delete</button>
+            {{#ifEquals ../currentUser._id this.userID._id}}
+                <button class="delete-button" data-spotify-song-id={{this.id}} data-user-id={{this.userID._id}} type="button" name="delete">Delete</button>
+            {{/ifEquals}}
             <hr>
         </div>
     {{/each}}
