--- a/views/user-profile.handlebars
+++ b/views/user-profile.handlebars
@@ -1,6 +1,6 @@
 <h1>What {{user.username}}'s Playing</h1>
 {{#ifEquals currentUser._id user._id}}
-    <button type="button" name="button">Edit Profile</button>
+    <a href="/edit-profile/{{user._id}}">Edit Profile</a>
     {{else}}
         <button type="button" name="button">Follow</button>
 {{/ifEquals}}
