--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,4 +1,5 @@
 {{#if currentUser}}
+    <a href="/edit-profile/{{currentUser._id}}">Edit Profile</a>
     <a href="/logout">Logout</a>
 {{else}}
     <a href="/login">Login</a>
