Add name to user model

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -6,6 +6,10 @@
 <label for="username">Username</label>
 <input type="text" name="username" value="{{currentUser.username}}">
 
+<label for="name">Name</label>
+<input type="text" name="name" value="{{currentUser.name}}">
+
+
 <label for="email">Email</label>
 <input type="email" name="email" value="{{currentUser.email}}">
 
