--- a/views/user-profile.handlebars
+++ b/views/user-profile.handlebars
@@ -1,3 +1,4 @@
+<h3>{{user.username}}</h3>
 <img src="{{avatar}}" alt="avatar">
 {{#ifEquals currentUser._id user._id}}
     <a href="/edit-profile/{{user._id}}">Edit Profile</a>
@@ -5,5 +6,7 @@
         <button type="button" name="button">Follow</button>
 {{/ifEquals}}
 
-<h1>What {{user.username}}'s Playing</h1>
-{{> feed}}
+<h1>What {{user.name}} is Playing</h1>
+<div class="feed">
+    {{> feed}}
+</div>
