Fix username not showing in following feed

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -16,16 +16,16 @@
 <h1>What's Playing</h1>
 
 <h2>Global</h2>
-<div class="global-feed">
+<div class="global-feed feed">
     {{> feed songs=globalSongs}}
 </div>
 <hr>
 <h2>Following</h2>
-<div class="following-feed">
+<div class="following-feed feed">
     {{> feed songs=followingSongs}}
 </div>
 <hr>
 <h2>Personal</h2>
-<div class="personal-feed">
+<div class="personal-feed feed">
     {{> feed songs=personalSongs}}
 </div>
