Tweak search bar

--- a/views/partials/search.handlebars
+++ b/views/partials/search.handlebars
@@ -1,7 +1,7 @@
 <div class="search">
     {{#if currentUser}}
         <form action="/search" method="GET">
-            <input type="search" autocomplete="off" name="term" class="search-field" placeholder="Search for Song">
+            <input type="search" autocomplete="off" name="term" class="search-field" placeholder="Search for a song to share">
             <button class="search-btn" type="submit">+</button>
         </form>
     {{/if}}
