--- a/views/partials/feed.handlebars
+++ b/views/partials/feed.handlebars
@@ -15,7 +15,7 @@
         <div class="right-container">
             {{#ifEquals ../currentUser._id this.user._id}}
                 <button class="delete-button" data-spotify-song-id={{this.id}} data-user-id={{this.user._id}} type="button" name="delete">
-                    <svg class="delete-button" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6 13h-12v-2h12v2z"/></svg>
+                    DELETE
                 </button>
             {{/ifEquals}}
             </div>
