--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,10 +1,12 @@
 <header>
     <div class="account">
         {{#if currentUser}}
-            <a href="/edit-profile/{{currentUser._id}}">Edit Profile</a>
+            <a href="/user/{{currentUser.username}}">View Profile</a>
+            •
             <a href="/logout">Logout</a>
         {{else}}
             <a href="/login">Login</a>
+            •
             <a href="/signup">Sign Up</a>
         {{/if}}
     </div>
