--- a/views/partials/feed.handlebars
+++ b/views/partials/feed.handlebars
@@ -1,5 +1,5 @@
 {{#unless songs}}
-    <h4>Nothing here :( Follow your friends!</h4>
+    <h4>Nothing here :(</h4>
 {{/unless}}
 {{#each songs}}
     <div class="share">
