--- a/public/css/master.css
+++ b/public/css/master.css
@@ -6,10 +6,16 @@ body {
     font-size: 16px;
 }
 
+/* MAIN PAGE */
 a {
     text-decoration: inherit;
     color: inherit;
     cursor: auto;
+    transition: all 250ms;
+}
+
+a:hover {
+    color: rgba(255, 255, 255, 0.5);
 }
 
 header {
@@ -55,6 +61,11 @@ header {
     padding: 0;
     color: #fff;
     outline: none;
+    transition: all .25s
+}
+
+.tab:hover {
+    color: rgba(255, 255, 255, 0.7);
 }
 
 .active-tab {
@@ -115,7 +126,7 @@ header {
     margin-bottom: 16px;
 }
 
-.search > form {
+.search>form {
     display: flex;
     flex-direction: row;
 }
@@ -134,7 +145,8 @@ header {
     padding: 0;
     outline: none;
 }
-.search-btn{
+
+.search-btn {
     background: #1d1b29;
     border: none;
     color: #fff;
@@ -146,7 +158,6 @@ header {
     border-radius: 3px;
     font-size: 1.5em;
     outline: none;
-
 }
 
 .search-field::placeholder {
@@ -231,4 +242,142 @@ header {
 
 .delete-button:hover {
     background: #b52f2f;
+}
+
+/* PROFILE VIEW */
+.top-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.back {
+    margin: 16px 0px 0px 16px;
+}
+
+.follow-button {
+    font-size: 1em;
+    font-weight: lighter;
+    color: #38344F;
+    outline: none;
+    width: 124px;
+    height: 32px;
+    align-self: center;
+    background: #fff;
+    border: 1px solid #fff;
+    border-radius: 3px;
+    margin-bottom: 16px;
+    transition: all .8s;
+}
+
+.unfollow-button {
+    font-size: 1em;
+    font-weight: lighter;
+    color: #fff;
+    outline: none;
+    width: 124px;
+    height: 32px;
+    align-self: center;
+    background: #38344F;
+    border: 1px solid #fff;
+    border-radius: 3px;
+    margin-bottom: 16px;
+    transition: all .8s;
+}
+
+.profile-feed {
+    margin-top: 32px;
+}
+
+/* SIGNUP/EDIT */
+.user-form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+}
+
+.user-form>div {
+    width: 35%;
+    margin-bottom: 16px;
+    display: flex;
+    flex-direction: row;
+}
+
+.user-form * label {
+    font-size: 2em;
+    width: 50%;
+}
+
+.user-form * input {
+    font-size: 1.5em;
+    width: 70%;
+    outline: none;
+    border-radius: 4px;
+    border: none;
+    text-align: center;
+}
+
+.user-form>.name {
+    visibility: hidden;
+    height: 0;
+    margin: 0;
+}
+
+.submit-btn {
+    height: 40px;
+    width: 160px;
+    border: none;
+    outline: none;
+    border-radius: 6px;
+    font-size: 1.8em;
+    color: #2e2c41;
+    font-weight: bolder;
+}
+
+/* Login */
+.login-back {
+    position: absolute;
+    top: 16px;
+    left: 16px;
+    font-size: 1.2em;
+}
+
+.login-form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+}
+
+.login-form>div {
+    width: 35%;
+    margin-bottom: 16px;
+    display: flex;
+    flex-direction: row;
+}
+
+.login-form>div {
+    width: 35%;
+    margin-bottom: 16px;
+    display: flex;
+    flex-direction: row;
+}
+
+.login-form * label {
+    font-size: 2em;
+    width: 50%;
+}
+
+.login-form * input {
+    font-size: 1.5em;
+    width: 50%;
+    outline: none;
+    border-radius: 4px;
+    border: none;
+    text-align: center;
 }
