Beautify search results, tweak search button

--- a/views/partials/search.handlebars
+++ b/views/partials/search.handlebars
@@ -2,7 +2,9 @@
     {{#if currentUser}}
         <form action="/search" method="GET">
             <input type="search" autocomplete="off" name="term" class="search-field" placeholder="Search for a song to share">
-            <button class="search-btn" type="submit">+</button>
+            <button class="search-btn" type="submit">
+                <span class="btn-text">+</span>
+            </button>
         </form>
     {{/if}}
 </div>
