--- a/public/css/master.css
+++ b/public/css/master.css
@@ -156,8 +156,13 @@ header {
     position: relative;
     right: 4px;
     border-radius: 3px;
-    font-size: 1.5em;
+    font-size: 3em;
     outline: none;
+}
+
+.btn-text {
+    position: relative;
+    bottom: 8px;
 }
 
 .search-field::placeholder {
@@ -174,7 +179,7 @@ header {
 
 .share {
     margin: 8px 0px 8px 0px;
-    width: 60%;
+    width: 45%;
     height: 124px;
     background-color: #38344F;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
@@ -380,4 +385,30 @@ header {
     border-radius: 4px;
     border: none;
     text-align: center;
+}
+
+/* SONG SEARCH */
+
+.results {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    margin: 32px 0 32px 0;
+}
+
+.song-result {
+    margin: 8px 0px 8px 0px;
+    width: 45%;
+    height: 124px;
+    background-color: #38344F;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
+    padding: 8px 8px 8px 8px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: stretch;
+    border-radius: 3px;
 }
