Create landing page

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -478,3 +478,31 @@ label[for="mentionID"] {
     width: 80%;
 
 }
+
+/* LANDING PAGE */
+
+.landing-page-container {
+    display: flex;
+    flex-direction: column;
+    width: 75%;
+    margin: auto;
+    margin-bottom: 64px;
+
+}
+
+.landing-page-container > form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+button.signup {
+    width: 8em;
+    height: 2em;
+    margin: auto;
+}
+
+.about {
+    text-align: center;
+    font-size: 2em;
+}
