--- a/views/landing-page.handlebars
+++ b/views/landing-page.handlebars
@@ -12,7 +12,7 @@
         Start your journey by signing up, or see what people are sharing below.</h4>
 
     <form action="/signup">
-        <button class="submit-btn signup" type="button" name="button">Sign Up</button>
+        <button class="submit-btn signup" type="submit" name="button">Sign Up</button>
     </form>
 
 </div>
