--- a/public/css/master.css
+++ b/public/css/master.css
@@ -1,521 +1,529 @@
 body {
-    background: rgba(46, 44, 65, 1.0);
-    margin: 0;
-    color: #FFF;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 16px;
-    overflow-x: hidden;
+  background: rgba(46, 44, 65, 1.0);
+  margin: 0;
+  color: #FFF;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  overflow-x: hidden;
 }
 
 /* MAIN PAGE */
+
 a {
-    text-decoration: inherit;
-    color: inherit;
-    cursor: auto;
-    transition: all 250ms;
+  text-decoration: inherit;
+  color: inherit;
+  cursor: pointer;
+  transition: all 250ms;
 }
 
 a:hover {
-    color: rgba(255, 255, 255, 0.5);
+  color: rgba(255, 255, 255, 0.5);
+}
+
+button {
+  cursor: pointer;
 }
 
 header {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 200px;
-    background-color: #38344F;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 200px;
+  background-color: #38344F;
+  width: 100%;
 }
 
 .account {
-    align-self: flex-end;
-    margin: 16px 16px 0px 0px;
-    font-size: 1em;
+  align-self: flex-end;
+  margin: 16px 16px 0px 0px;
+  font-size: 1em;
 }
 
 .greating {
-    height: 56px;
-    width: 15em;
-    align-content: center;
-    text-align: center;
-    color: #FFF;
-    font-size: 2.5em;
-    align-self: center;
-    margin: 0;
+  height: 56px;
+  width: 15em;
+  align-content: center;
+  text-align: center;
+  color: #FFF;
+  font-size: 2.5em;
+  align-self: center;
+  margin: 0;
 }
 
 .tab-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .tab {
-    width: 33.33%;
-    text-align: center;
-    margin-bottom: 16px;
-    font-size: 1.25em;
-    z-index: 2;
-    background: none;
-    border: none;
-    padding: 0;
-    color: #fff;
-    outline: none;
-    transition: all .25s
+  width: 33.33%;
+  text-align: center;
+  margin-bottom: 16px;
+  font-size: 1.25em;
+  z-index: 2;
+  background: none;
+  border: none;
+  padding: 0;
+  color: #fff;
+  outline: none;
+  transition: all .25s;
+  cursor: pointer
 }
 
 .tab:hover {
-    color: rgba(255, 255, 255, 0.7);
+  color: rgba(255, 255, 255, 0.7);
 }
 
 .active-tab {
-    background-color: rgba(46, 44, 65, 1.0);
-    position: absolute;
-    top: 150px;
-    height: 56px;
-    width: 33.33%;
-    border-radius: 6px;
-    z-index: 1;
-    transition: 750ms;
+  background-color: rgba(46, 44, 65, 1.0);
+  position: absolute;
+  top: 150px;
+  height: 56px;
+  width: 33.33%;
+  border-radius: 6px;
+  z-index: 1;
+  transition: 750ms;
 }
 
 .left-one {
-    -moz-transform: translateX(-33.33vw);
-    -webkit-transform: translateX(-33.33vw);
-    -o-transform: translateX(-33.33vw);
-    -ms-transform: translateX(-33.33vw);
-    transform: translateX(-33.33vw);
+  -moz-transform: translateX(-33.33vw);
+  -webkit-transform: translateX(-33.33vw);
+  -o-transform: translateX(-33.33vw);
+  -ms-transform: translateX(-33.33vw);
+  transform: translateX(-33.33vw);
 }
 
 .right-one {
-    -moz-transform: translateX(33.33vw);
-    -webkit-transform: translateX(33.33vw);
-    -o-transform: translateX(33.33vw);
-    -ms-transform: translateX(33.33vw);
-    transform: translateX(33.33vw);
+  -moz-transform: translateX(33.33vw);
+  -webkit-transform: translateX(33.33vw);
+  -o-transform: translateX(33.33vw);
+  -ms-transform: translateX(33.33vw);
+  transform: translateX(33.33vw);
 }
 
 .left-two {
-    -moz-transform: translateX(-66.66vw);
-    -webkit-transform: translateX(-66.66vw);
-    -o-transform: translateX(-66.66vw);
-    -ms-transform: translateX(-66.66vw);
-    transform: translateX(-66.66vw);
+  -moz-transform: translateX(-66.66vw);
+  -webkit-transform: translateX(-66.66vw);
+  -o-transform: translateX(-66.66vw);
+  -ms-transform: translateX(-66.66vw);
+  transform: translateX(-66.66vw);
 }
 
 .right-two {
-    -moz-transform: translateX(66.66vw);
-    -webkit-transform: translateX(66.66vw);
-    -o-transform: translateX(66.66vw);
-    -ms-transform: translateX(66.66vw);
-    transform: translateX(66.66vw);
+  -moz-transform: translateX(66.66vw);
+  -webkit-transform: translateX(66.66vw);
+  -o-transform: translateX(66.66vw);
+  -ms-transform: translateX(66.66vw);
+  transform: translateX(66.66vw);
 }
 
 .feed-container {
-    display: flex;
-    flex-direction: row-reverse;
-    width: 300vw;
-    align-content: center;
-    position: relative;
-    right: 100vw;
-    transition: 750ms;
-    margin-top: 16px;
-    overflow-x: hidden;
+  display: flex;
+  flex-direction: row-reverse;
+  width: 300vw;
+  align-content: center;
+  position: relative;
+  right: 100vw;
+  transition: 750ms;
+  margin-top: 16px;
+  overflow-x: hidden;
 }
 
 .search {
-    margin-bottom: 16px;
+  margin-bottom: 16px;
 }
 
 .search>form {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 .search-field {
-    -webkit-appearance: none;
-    background: #38344F;
-    width: 232px;
-    border: none;
-    border-radius: 3px;
-    color: #fff;
-    font-size: 1em;
-    height: 48px;
-    text-align: center;
-    border: #DA3E41 3px solid;
-    margin: 0;
-    padding: 0;
-    outline: none;
+  -webkit-appearance: none;
+  background: #38344F;
+  width: 232px;
+  border: none;
+  border-radius: 3px;
+  color: #fff;
+  font-size: 1em;
+  height: 48px;
+  text-align: center;
+  border: #DA3E41 3px solid;
+  margin: 0;
+  padding: 0;
+  outline: none;
 }
 
 .search-btn {
-    background: #DA3E41;
-    border: none;
-    color: #fff;
-    margin: 0;
-    height: 48px;
-    width: 48px;
-    position: relative;
-    right: 4px;
-    border-radius: 3px;
-    font-size: 3em;
-    outline: none;
+  background: #DA3E41;
+  border: none;
+  color: #fff;
+  margin: 0;
+  height: 48px;
+  width: 48px;
+  position: relative;
+  right: 4px;
+  border-radius: 3px;
+  font-size: 3em;
+  outline: none;
 }
 
 .btn-text {
-    position: relative;
-    bottom: 8px;
+  position: relative;
+  bottom: 8px;
 }
 
 .search-field::placeholder {
-    color: #ffffffab;
+  color: #ffffffab;
 }
 
 .feed {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100vw;
-    margin: 0 auto 0 auto;
-    overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+  margin: 0 auto 0 auto;
+  overflow-x: hidden;
 }
 
 .share {
-    margin: 8px 0px 8px 0px;
-    width: 45%;
-    max-width: 760px ;
-    height: 124px;
-    background-color: #38344F;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
-    padding: 8px 8px 8px 8px;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: stretch;
-    border-radius: 3px;
+  margin: 8px 0px 8px 0px;
+  width: 45%;
+  max-width: 760px;
+  height: 124px;
+  background-color: #38344F;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
+  padding: 8px 8px 8px 8px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: stretch;
+  border-radius: 3px;
 }
 
 .details {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
-    width: 70%;
-    margin-left: 32px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  width: 70%;
+  margin-left: 32px;
 }
 
 .song-info {
-    display: flex;
-    flex-direction: column;
-    margin-top: 8px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 8px;
 }
 
 .song-name {
-    color: #FFF;
-    font-size: 1.8em;
-    margin-bottom: 8px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    max-width: calc(760px - 132px);
+  color: #FFF;
+  font-size: 1.8em;
+  margin-bottom: 8px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  max-width: calc(760px - 132px);
 }
 
 .artist {
-    color: #959595;
-    font-size: 1.3em;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+  color: #959595;
+  font-size: 1.3em;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .share-message {
-    margin-bottom: 8px;
-    font-size: 1.3em;
+  margin-bottom: 8px;
+  font-size: 1.3em;
 }
 
-.user, .mention {
-    font-weight: 700;
-    color: #DA3E41;
+.user,
+.mention {
+  font-weight: 700;
+  color: #DA3E41;
 }
 
 .right-container {
-    width: 15%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+  width: 15%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 .delete-button {
-    background: none;
-    color: #ffff;
-    border: 2px #b52f2f solid;
-    font-weight: bold;
-    border-radius: 3px;
-    width: 80px;
-    height: 32px;
-    padding: 0;
-    transition: all .25s;
+  background: none;
+  color: #ffff;
+  border: 2px #b52f2f solid;
+  font-weight: bold;
+  border-radius: 3px;
+  width: 80px;
+  height: 32px;
+  padding: 0;
+  transition: all .25s;
 }
 
 .delete-button:hover {
-    background: #b52f2f;
+  background: #b52f2f;
 }
 
 /* PROFILE VIEW */
+
 .top-header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .back {
-    margin: 16px 0px 0px 16px;
+  margin: 16px 0px 0px 16px;
 }
 
 .follow-button {
-    font-size: 1em;
-    font-weight: lighter;
-    color: #38344F;
-    outline: none;
-    width: 124px;
-    height: 32px;
-    align-self: center;
-    background: #fff;
-    border: 1px solid #fff;
-    border-radius: 3px;
-    margin-bottom: 16px;
-    transition: all .8s;
+  font-size: 1em;
+  font-weight: lighter;
+  color: #38344F;
+  outline: none;
+  width: 124px;
+  height: 32px;
+  align-self: center;
+  background: #fff;
+  border: 1px solid #fff;
+  border-radius: 3px;
+  margin-bottom: 16px;
+  transition: all .8s;
 }
 
 .unfollow-button {
-    font-size: 1em;
-    font-weight: lighter;
-    color: #fff;
-    outline: none;
-    width: 124px;
-    height: 32px;
-    align-self: center;
-    background: #38344F;
-    border: 1px solid #fff;
-    border-radius: 3px;
-    margin-bottom: 16px;
-    transition: all .8s;
+  font-size: 1em;
+  font-weight: lighter;
+  color: #fff;
+  outline: none;
+  width: 124px;
+  height: 32px;
+  align-self: center;
+  background: #38344F;
+  border: 1px solid #fff;
+  border-radius: 3px;
+  margin-bottom: 16px;
+  transition: all .8s;
 }
 
 .profile-feed {
-    margin-top: 32px;
+  margin-top: 32px;
 }
 
 /* SIGNUP/EDIT */
+
 .user-form {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100vh;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
 }
 
 .user-form>div {
-    width: 35%;
-    margin-bottom: 16px;
-    display: flex;
-    flex-direction: row;
+  width: 35%;
+  margin-bottom: 16px;
+  display: flex;
+  flex-direction: row;
 }
 
 .user-form * label {
-    font-size: 2em;
-    width: 50%;
+  font-size: 2em;
+  width: 50%;
 }
 
 .user-form * input {
-    font-size: 1.5em;
-    width: 70%;
-    outline: none;
-    border-radius: 4px;
-    border: none;
-    text-align: center;
+  font-size: 1.5em;
+  width: 70%;
+  outline: none;
+  border-radius: 4px;
+  border: none;
+  text-align: center;
 }
 
 .user-form>.name {
-    visibility: hidden;
-    height: 0;
-    margin: 0;
+  visibility: hidden;
+  height: 0;
+  margin: 0;
 }
 
 .submit-btn {
-    height: 40px;
-    width: 160px;
-    border: none;
-    outline: none;
-    border-radius: 6px;
-    font-size: 1.8em;
-    color: #2e2c41;
-    background: #DA3E41;
-    font-weight: bolder;
-    align-self: center;
-    transition: all .25s;
+  height: 40px;
+  width: 160px;
+  border: none;
+  outline: none;
+  border-radius: 6px;
+  font-size: 1.8em;
+  color: #2e2c41;
+  background: #DA3E41;
+  font-weight: bolder;
+  align-self: center;
+  transition: all .25s;
 }
 
 .submit-btn:hover {
-    box-shadow: 0 3px 9px 0 rgba(0, 0, 0, 0.5);
-    transform: scale(1.01);
+  box-shadow: 0 3px 9px 0 rgba(0, 0, 0, 0.5);
+  transform: scale(1.01);
 }
 
 /* Login */
+
 .login-back {
-    position: absolute;
-    top: 16px;
-    left: 16px;
-    font-size: 1.2em;
+  position: absolute;
+  top: 16px;
+  left: 16px;
+  font-size: 1.2em;
 }
 
 .login-form {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100vh;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
 }
 
 .login-form>div {
-    width: 35%;
-    margin-bottom: 16px;
-    display: flex;
-    flex-direction: row;
+  width: 35%;
+  margin-bottom: 16px;
+  display: flex;
+  flex-direction: row;
 }
 
 .login-form>div {
-    width: 35%;
-    margin-bottom: 16px;
-    display: flex;
-    flex-direction: row;
+  width: 35%;
+  margin-bottom: 16px;
+  display: flex;
+  flex-direction: row;
 }
 
 .login-form * label {
-    font-size: 2em;
-    width: 50%;
+  font-size: 2em;
+  width: 50%;
 }
 
 .login-form * input {
-    font-size: 1.5em;
-    width: 50%;
-    outline: none;
-    border-radius: 4px;
-    border: none;
-    text-align: center;
+  font-size: 1.5em;
+  width: 50%;
+  outline: none;
+  border-radius: 4px;
+  border: none;
+  text-align: center;
 }
 
 /* SONG SEARCH */
 
 .results {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
-    margin: 32px 0 32px 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  margin: 32px 0 32px 0;
 }
 
 .song-result {
-    margin: 8px 0px 8px 0px;
-    width: 45%;
-    height: 124px;
-    background-color: #38344F;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
-    padding: 8px 8px 8px 8px;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: stretch;
-    border-radius: 3px;
+  margin: 8px 0px 8px 0px;
+  width: 45%;
+  height: 124px;
+  background-color: #38344F;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
+  padding: 8px 8px 8px 8px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: stretch;
+  border-radius: 3px;
 }
 
 /* SHARE INFO */
 
 .share-form-container {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100vh;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
 }
 
 .share-info {
-    margin: 8px 0px 8px 0px;
-    width: 35%;
-    height: 124px;
-    background-color: #38344F;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
-    padding: 8px 8px 8px 8px;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: stretch;
-    border-radius: 3px;
+  margin: 8px 0px 8px 0px;
+  width: 35%;
+  height: 124px;
+  background-color: #38344F;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
+  padding: 8px 8px 8px 8px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: stretch;
+  border-radius: 3px;
 }
 
-
 .share-form {
-    margin-top: 16px;
-    display: flex;
-    flex-direction: column;
-    line-height: 2.5em;
+  margin-top: 16px;
+  display: flex;
+  flex-direction: column;
+  line-height: 2.5em;
 }
 
 .privacy {
-    background: #38344F;
-    padding: 16px;
-    border-radius: 8px;
-    align-items: center;
+  background: #38344F;
+  padding: 16px;
+  border-radius: 8px;
+  align-items: center;
 }
+
 .mention-holder {
-    margin-top: 8px;
-    margin-bottom: 24px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
+  margin-top: 8px;
+  margin-bottom: 24px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
 }
 
 label[for="mentionID"] {
-    text-align: center;
+  text-align: center;
 }
 
 #mentionID {
-    height: 2em;
-    width: 80%;
-
+  height: 2em;
+  width: 80%;
 }
 
 /* LANDING PAGE */
 
 .landing-page-container {
-    display: flex;
-    flex-direction: column;
-    width: 75%;
-    margin: auto;
-    margin-bottom: 64px;
-
+  display: flex;
+  flex-direction: column;
+  width: 75%;
+  margin: auto;
+  margin-bottom: 64px;
 }
 
-.landing-page-container > form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.landing-page-container>form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 button.signup {
-    width: 8em;
-    height: 2em;
-    margin: auto;
+  width: 8em;
+  height: 2em;
+  margin: auto;
 }
 
 .about {
-    text-align: center;
-    font-size: 2em;
+  text-align: center;
+  font-size: 2em;
 }
