feat: redirect to /login from / when not authorized fix: show error to user on auth failure at /login instead of json       response refactor: pull out common logic for setting auth token cookie feat: implement axios interceptor to redirect user to /login on       401 for axios request feat: show error to user when query to spotify fails

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,4 +12,8 @@
     </div>
 
     <button class="submit-btn" type="submit" name="button">Log In</button>
+
+    {{#if message}}
+    Error: {{ message }}
+    {{/if}}
 </form>
