adds cursor styling to tab class

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -63,7 +63,8 @@ header {
     padding: 0;
     color: #fff;
     outline: none;
-    transition: all .25s
+    transition: all .25s;
+    cursor: pointer;
 }
 
 .tab:hover {
