--- a/public/css/master.css
+++ b/public/css/master.css
@@ -198,37 +198,6 @@ header {
     border-radius: 3px;
 }
 
-.share.detailed-view {
-    position: absolute;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-
-    height: 372px;
-    width: 45%;
-    padding: 24px 24px 24px 24px;
-    box-shadow: none;
-    z-index: 10;
-}
-
-.detailed-view>img {
-    height: 248px;
-    width: 248px;
-}
-
-.background-fade {
-    position: absolute;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-
-    height: 100vh;
-    width: 100vw;
-
-    color: rgba(0, 0, 0, 0.5);
-}
 .details {
     display: flex;
     flex-direction: column;
@@ -238,15 +207,20 @@ header {
     margin-left: 32px;
 }
 
+.music-player {
+    visibility: hidden;
+    height: 0;
+}
+
 .song-info {
     display: flex;
     flex-direction: column;
-    margin-top: 8px;
 }
 
 .song-name {
     color: #FFF;
     font-size: 1.8em;
+    font-weight: 700;
     margin-bottom: 8px;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -261,8 +235,20 @@ header {
     white-space: nowrap;
 }
 
+.album-info {
+    overflow: hidden;
+    height: 0;
+}
+
+.album-info>.intro {
+    font-weight: 300;
+}
+
+.album-name {
+    font-size: 1.3em;
+}
+
 .share-message {
-    margin-bottom: 8px;
     font-size: 1.3em;
 }
 
@@ -292,6 +278,59 @@ header {
 
 .delete-button:hover {
     background: #b52f2f;
+}
+
+.share.detailed-view {
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    font-size: 1.2em;
+    height: 372px;
+    width: 45%;
+    padding: 24px 24px 24px 24px;
+    box-shadow: none;
+    z-index: 10;
+}
+
+.detailed-view>img {
+    height: 248px;
+    width: 248px;
+}
+
+.detailed-view .music-player {
+    visibility: visible;
+    height: 80px;
+    margin-bottom: 24px;
+}
+
+.detailed-view .song-name {
+    margin-bottom: 16px;
+}
+
+.detailed-view .artist {
+    margin-bottom: 16px;
+}
+
+.detailed-view .intro {
+    margin-bottom: 8px;
+}
+
+.detailed-view .album-info {
+    height: auto;
+    width: auto;
+}
+
+.dim.active {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.3;
+    z-index: 9;
+    background: #000
 }
 
 /* PROFILE VIEW */
