--- a/views/partials/feed.handlebars
+++ b/views/partials/feed.handlebars
@@ -7,10 +7,17 @@
 
         <div class="details">
             <div class="song-info">
+                <iframe class="music-player" src="https://open.spotify.com/embed/track/{{this.id}}" width="350" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                 <div class="song-name">{{this.name}}</div>
                 <div class="artist">{{this.artists.[0].name}}</div>
+                <div class="album-info">
+                    <div class="intro">From the album</div>
+                    <div class="album-name">{{this.album.name}}</div>
+                </div>
             </div>
-            <div class="share-message">Shared by <a class="user" href="/user/{{this.user.username}}">{{this.user.username}}</a> to {{#if this.mention}}<a class="mention" href="/user/{{this.mention.username}}">{{this.mention.username}}</a>{{else}}{{#ifEquals this.privacy 0}}<a class="mention">the World</a>{{else}}<a class="mention">their Followers</a>{{/ifEquals}}{{/if}}</div>
+            <div class="share-message">Shared by <a class="user" href="/user/{{this.user.username}}">{{this.user.username}}</a> to {{#if this.mention}}<a class="mention" href="/user/{{this.mention.username}}">{{this.mention.username}}</a>{{else}}{{#ifEquals this.privacy 0}}<a
+                            class="mention">the World</a>
+                {{else}}<a class="mention">their Followers</a>{{/ifEquals}}{{/if}}</div>
         </div>
         <div class="right-container">
             {{#ifEquals ../currentUser._id this.user._id}}
@@ -18,6 +25,6 @@
                     DELETE
                 </button>
             {{/ifEquals}}
-            </div>
+        </div>
     </div>
 {{/each}}
