--- a/public/css/master.css
+++ b/public/css/master.css
@@ -181,6 +181,7 @@ header {
     width: 100vw;
     margin: 0 auto 0 auto;
     overflow-x: hidden;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
 }
 
 .share {
@@ -281,17 +282,19 @@ header {
 }
 
 .share.detailed-view {
-    position: absolute;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
+    position: fixed;
+    /* margin-left: auto;
+    margin-right: auto; */
+    /* left: 0; */
+    /* right: 0; */
+    left: 25vw;
     font-size: 1.2em;
     height: 372px;
     width: 45%;
     padding: 24px 24px 24px 24px;
     box-shadow: none;
-    z-index: 10;
+    z-index: 1000;
+    box-shadow: 0 0 100vh 100vw rgba(0, 0, 0, 0.6);
 }
 
 .detailed-view>img {
@@ -322,16 +325,16 @@ header {
     width: auto;
 }
 
-.dim.active {
+/* .dim.active {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 0.3;
-    z-index: 9;
-    background: #000
-}
+    width: 100vw;
+    height: 100vh;
+    background: #000;
+    opacity: 0.6;
+    z-index: 5;
+} */
 
 /* PROFILE VIEW */
 .top-header {
