--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,3 +1,4 @@
+<!-- <div class="dim"></div> -->
 <header>
     <div class="account">
         {{#if currentUser}}
@@ -41,4 +42,3 @@
         {{> feed songs=globalSongs}}
     </div>
 </div>
-<div class="dim"></div>
